# csv_tool

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART_GUI.md  README.md  README_GUI.md  build.bat  build.ps1  create_icon.ps1  generate_icon.bat  install_rust.ps1  package-lock.json  setup_gui.bat  setup_gui.sh  setup_gui_fixed.bat  start_frontend.bat  start_tauri.bat  使用说明_窗口关闭问题.md  启动说明.md  安装TauriCLI.bat  更新Rust.bat  更新Rust_强制.bat  构建EXE.bat  构建EXE_调试版.bat  清理构建产物.bat  生成图标.bat  运行GUI.bat  配置Cargo镜像.bat
benches/: benchmark.rs
data/: added_row.csv  added_row.csv.idx  deleted_rows.csv  deleted_rows.csv.idx  edited.csv  edited.csv.idx  new.csv  new.csv.idx  test.csv  test.csv.idx
docs/: CHANGELOG.md  CLI_OPTIMIZATION_PLAN.md  CURRENT_OPTIMIZATION_OPPORTUNITIES.md  EXPORT_FEATURE_PLAN.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX_PERSISTENCE_PLAN.md  INDEX_PERSISTENCE_PROGRESS.md  INDEX_PERSISTENCE_SUMMARY.md  MISSING_FEATURES.md  NEXT_OPTIMIZATIONS.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION_V2.md  PROJECT_STATUS.md  SEARCH_FEATURE_PLAN.md  SORT_FEATURE_PLAN.md  USAGE.md  WRITER_FEATURE_PLAN.md
examples/: basic_usage.rs  index_persistence_demo.rs  sample.csv  sample.csv.idx
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
src/: error.rs  lib.rs  main.rs
src/csv/: cache.rs  export.rs  index.rs  mod.rs  reader.rs  search.rs  sort.rs  utils.rs  writer.rs
tauri/: Cargo.toml  start_frontend.bat  tauri.conf.json
tauri/icons/: README.md  create_icon.ps1  create_placeholder_icon.md
tauri/src/: main.rs
tests/: export_test.rs  index_persistence_test.rs  integration_test.rs  search_test.rs  sort_test.rs  writer_test.rs
(+10 files in other folders)
