[package]
name = "csv-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "csv-tool"
path = "src/main.rs"

[lib]
name = "csv_tool"
path = "src/lib.rs"

[dependencies]
# CSV处理
csv = "1.3"

# 内存映射（核心优化）
memmap2 = "0.9"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 缓存
lru = "0.12"

# 工具库
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # 索引序列化（二进制格式，更高效）

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
