[package]
name = "csv-tool-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv-tool = { path = "../" }

[features]
# This feature is used for production builds or when `devPath` points to the production frontend.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

